--- a/archivo1.html
+++ b/archivo1.html
@@ -1,84 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formulario con Bootstrap</title>
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
 
-    <div class="container">
-        <form class="row g-12 mt-3">
-
-            <div class="col-6">
-                <label for="emailInput" class=" form-label">email</label>
-                <input type="email" class="form control" id="emailInput" placeholder="escribe tu email">
+    <div class="container mt-5">
+        <form class="needs-validation" novalidate>
+            <div class="form-group">
+                <label for="email">Correo electrónico:</label>
+                <input type="email" class="form-control" id="email" placeholder="Ingresa tu email" required>
+                <div class="invalid-feedback">Por favor, ingresa un email válido.</div>
             </div>
-
-            <div class="col-6">
-             <label for="inputpass" class="form-label">contraseña</label>
-             <input type="password" class="from control" id="inputpass" placeholder="ingrese contraseña">
+            <div class="form-group">
+                <label for="password">Contraseña:</label>
+                <input minlength="8" type="password" class="form-control" id="password" placeholder="****" required>
+                <div class="invalid-feedback">Contraseña debe tener al menos 8 caracteres.</div>
             </div>
-
-
-            <div class="col-12">
-             <label for="inputaddress" class="form-label">direccion</label>
-             <input type="text" class="form control" id="inputaddress"  placeholder="direccion">
-
-            </div>
-
-
-            <div class="col-12">
-                <label for="inputaddress" class="form-label">Telefono</label>
-                <input type="text" class="form control" id="inputaddress"  placeholder="direccion">
-   
-            </div>
-
-
-            <div class="col-6">
-                <label for="cityInput" class="form-label">ciudad</label>
-                <input type="text" class="form-control" id="cityInput" placeholder="ciudad">
-            </div>
-
-
-            <div class="col-3">
-                <label for="postalcodeInput" class="form-label">codico postal</label>
-                <input type="text" class="form-control" id="postalcodeInput" placeholder="codigo postal">
-            </div>
-
-
-
-            <div class="col-3">
-                <label for="countryInput" class="form-label">pais</label>
-                <input type="text" class="form-control" id="countryInput" placeholder="pais">
-            </div>
-
-
-            <div class="col-12">
-                <div class="form-check">
-                    <input type="checkbox" class="form-check-input">
-                    <label for="checkterms" class="form-check-label">acepto los terminos</label>
-                </div>
-            </div>
-
-
-            <div class="col-12"> 
-                <button type="submit" class="btn btn-primary">
-                    registrate
-                </button>
-
-            </div>
-
-
+            <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
-
-
-
-
     </div>
 
-    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+
+    <script>
+        (function () {
+            'use strict';
+            window.addEventListener('load', function () {
+                var forms = document.getElementsByClassName('needs-validation');
+                var validation = Array.prototype.filter.call(forms, function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        form.classList.add('was-validated');
+                    }, false);
+                });
+            }, false);
+        })();
+    </script>
 </body>
+
 </html>
